[tool.poetry]
name = "requests-auth-aws-sigv4"
version = "0.7.0"
description = "AWS SigV4 Authentication with the python requests module"
authors = ["Andrew Roth <andrew@andrewjroth.com>"]
license = "Apache"

[tool.poetry.dependencies]
python = ">=2.7, >=3.6"
requests = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
